--- a/fullstack/client/package.json
+++ b/fullstack/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
