--- a/fullstack/client/package.json
+++ b/fullstack/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.1",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
