--- a/fullstack/client/package.json
+++ b/fullstack/client/package.json
@@ -18,6 +18,7 @@
     "react-h5-audio-player": "^3.9.1",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.13.0-alpha.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
